fixed spacing in about section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -460,6 +460,7 @@ ul {
     min-height: 100vh;
     background: var(--off-white);
     padding: 4rem 0;
+    
 }
 
 .about-section {
@@ -468,6 +469,8 @@ ul {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    justify-content: space-between;
+    height: 100%;
 }
 
 .cards {
@@ -476,6 +479,7 @@ ul {
     justify-content: center;
     gap: 3rem;
     flex-wrap: wrap;
+    /* width: 100%; */
 }
 
 .card {
@@ -495,28 +499,46 @@ ul {
     padding: 1rem 0;
 }
 
-.card .card-link {
+.card-link {
     color: var(--body-font-clr);
-    align-self: center;
+    align-self: flex-start;
 }
 
 .about-btn {
-    margin-top: 2rem;
+     margin: 2rem;
+}
+
+/* media queries */
+@media screen and (min-width: 767px){
+    .cards {
+        justify-content: center;
+    }
 }
 @media screen and (min-width: 992px){
-    .about {
-        min-height: 100vh;
-    }
-
-    .about-section {
+        .about-section {
         justify-content: space-between;
         height: 100%;
-        border: 2px solid red;
     }
     
     .cards {
         flex-direction: row;
         width: 100%;
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 1100px){
+    /* .about {
+        height: 100vh;
+    } */
+}
+
+@media screen and (min-width: 1250px) {
+    .about {
+        height: 100vh;
+    }
+    
+    .cards {
         justify-content: space-between;
     }
 }
@@ -743,4 +765,4 @@ input[type="checkbox"] {
     flex-shrink: 0;
      min-width: 250px;
      padding: 1.5rem;
-}
+} 
